AND-3365 fixed layout issues with multiple contributors

--- a/ArticleTemplates/assets/css/style.css
+++ b/ArticleTemplates/assets/css/style.css
@@ -5578,6 +5578,8 @@ Display a Guardian Witness submission.
   .tone--comment .article--comment .article__header .section,
   .tone--comment .article--comment .article__header .byline__author {
     color: #e6711b; }
+  .tone--comment .article--comment .article__header .byline__author {
+    display: inline; }
   .tone--comment .article--comment .meta {
     border: 0;
     margin: 0;
